# metrics

./: .gitignore  Makefile  README.markdown  metrics.cabal
src/: Collector.hs  HttpServer.hs  ParseCommand.hs  ParseCommand3.hs  ParseCommandAttoparsec.hs  ParseCommandParsec.hs  ParseCommandTrifecta.hs  ParserSnippet.hs  Snippet.hs
tests/: sample.txt
